@@ -1,5 +1,7 @@
 06 January 2009
 
+* Complete words at any point inside command in prompt, also use option name
+  as well as command names.
 * Per-client prompt history of up to 100 items.
 * Use a splay tree for key bindings instead of an array. As a side-effect this
   sorts them when listed.
@@ -798,7 +800,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.178 2009-01-06 15:37:15 nicm Exp $
+$Id: CHANGES,v 1.179 2009-01-06 17:04:56 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB
